# OpenGL-Lighted-Cube-Android

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/assets/shaders/: cubeMVP.fsh  cubeMVP.vsh
app/src/main/java/com/anandmuralidhar/cubeandroid/: CubeActivity.java
app/src/main/jni/nativeCode/common/: android_native_app_glue.h  myGLFunctions.cpp
app/src/main/jni/nativeCode/cube/: myCube.cpp  myCube.h
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
